2007-05-21  Inge Wallin  <inge@lysator.liu.se>

	Cleanup
	* src/katlasdirs.h: Clean
	* src/katlasaboutdialog.{h,cpp}: Clean
	* src/HttpDownloadManager.{h,cpp}: Clean
	* src/httpfetchfile.{h,cpp}: Clean
	* src/texcolorizer.{h,cpp}: Clean
	* src/xmlhandler.{h,cpp}: Clean

2007-05-20  Inge Wallin  <inge@lysator.liu.se>

	Cleanup
	* src/katlasviewpopupmenu.cpp (): Clean

2007-05-19  Inge Wallin  <inge@lysator.liu.se>

	Cleanup
	* src/katlasviewinputhandler.cpp (*): Clean
	
	Cleanup
	* src/TileLoader.cpp,   src/HttpDownloadManager.cpp
	src/katlastoolbox.cpp,  src/measuretool.cpp,
	src/texcolorizer.cpp,   src/katlaswindrose.cpp,
	src/katlastoolbox.h,    src/xmlhandler.cpp,
	src/placemarkmodel.cpp, src/katlasviewinputhandler.cpp: Remove warnings

	Fix a bug
	* src/TileLoader.h (message): Print the variable test instead of
	"test".

	Cleanup
	* src/katlasthemeselectview.{h,cpp}: Clean
	
15.05.07 - tackat
	- Made changes according to Krazy check
	- added incomplete HttpDownloadManager

11.05.07 - ingwa
	- Cleaned katlasbox.{h,cpp}
	- Cleaned KdeMainWindow.{h,cpp}
	- Cleaned tinywebbrowser.{h,cpp}

11.05.07 - ingwa
	- Create the model in KAtlasControl instead of in the view.
	- Cleaned searchcombobox.{h,cpp}
	- Cleaned searchlistview.{h,cpp}
09.05.07 - tackat
    - Updated marble.desktop file 
    - Changes in DESIGN and TODO

09.05.07 - tackat
    - Marble got Tooltips and WhatsThis now. 
    - Applied patch by Ralf Habacker for improved icon support in Windows

08.05.07 - tackat
    - Marble got a docbook-handbook now. 

07.05.07 - tackat
    - Make KMarble compile again (KMainWindow -> KXmlGuiWindow)
    - Default to QTONLY = OFF

07.05.07 - tackat
    Added Copy, Export Map and Printing to the Qt interface.

06.05.07 - ingwa
	Cleaning: TextureMapper: use m_ for all members + getFoo() -> foo()
	Cleaning: KAtlasView:    use m_ for all members + getFoo() -> foo()
	Cleaning: KAtlasGlobe:   use m_ for all members.
	
05.05.07 - tackat
	Added the KDE interface

29.04.07 - ingwa